Изменил слайдер на главной и русифицировал пункты меню

--- a/darelsalam/index.html
+++ b/darelsalam/index.html
@@ -6,7 +6,7 @@
 -->
 <!--[if lt IE 9]> <html class="lt-ie9" lang="en"> <![endif]-->
 <!--[if !IE] -->
-<html lang='en'>
+<html lang='ru'>
   <!-- <![endif] -->
   <head>
     <title>Home | Jednotka - Multipurpose Template</title>
@@ -29,186 +29,200 @@
   </head>
   <body class='homepage'>
     <div id='wrapper'>
-      <header id='header'>
-        <div class='container'>
-          <nav class='navbar navbar-collapsed-sm navbar-default' id='nav' role='navigation'>
-            <div class='navbar-header'>
-              <button class='navbar-toggle' data-target='.navbar-header-collapse' data-toggle='collapse' type='button'>
-                <span class='sr-only'>Toggle navigation</span>
-                <span class='icon-bar'></span>
-                <span class='icon-bar'></span>
-                <span class='icon-bar'></span>
-              </button>
-              <a class='navbar-brand' href='index.html'>
-                <img alt="Jednotka" width="117" height="39" src="assets/images/logo.svg" />
-              </a>
-            </div>
-            <div class='collapse navbar-collapse navbar-header-collapse'>
-              <ul class='nav navbar-nav navbar-right'>
-                <li class='active dropdown'>
-                  <a class='dropdown-toggle' data-delay='50' data-hover='dropdown' data-toggle='dropdown' href='#'>
-                    <span>
-                      Home
-                      <i class='fa fa-angle-down'></i>
-                    </span>
-                  </a>
-                  <ul class='dropdown-menu' role='menu'>
-                    <li class='active dropdown-submenu'>
-                      <a href='index.html'>Home</a>
-                    </li>
-                    <li class=''>
-                      <a href='index2.html'>Home 2</a>
-                    </li>
-                    <li class=''>
-                      <a href='index3.html'>Home 3</a>
-                    </li>
-                    <li class=''>
-                      <a href='boxed.html'>Boxed layout</a>
-                    </li>
-                  </ul>
-                </li>
-                <li class='dropdown'>
-                  <a class='dropdown-toggle' data-delay='50' data-hover='dropdown' data-toggle='dropdown' href='#'>
-                    <span>
-                      Pages
-                      <i class='fa fa-angle-down'></i>
-                    </span>
-                  </a>
-                  <ul class='dropdown-menu' role='menu'>
-                    <li class=''>
-                      <a href='about_us.html'>About us</a>
-                    </li>
-                    <li class=''>
-                      <a href='services.html'>Services</a>
-                    </li>
-                    <li class=''>
-                      <a href='faq.html'>FAQ</a>
-                    </li>
-                    <li>
-                      <a href='404.html'>404 Error</a>
-                    </li>
-                    <li>
-                      <a href='500.html'>500 Error</a>
-                    </li>
-                    <li>
-                      <a href='coming_soon.html'>Coming soon</a>
-                    </li>
-                    <li>
-                      <a href='under_construction.html'>Under construction</a>
-                    </li>
-                  </ul>
-                </li>
-                <li class='dropdown'>
-                  <a class='dropdown-toggle' data-delay='50' data-hover='dropdown' data-toggle='dropdown' href='#'>
-                    <span>
-                      Features
-                      <i class='fa fa-angle-down'></i>
-                    </span>
-                  </a>
-                  <ul class='dropdown-menu' role='menu'>
-                    <li class=''>
-                      <a href='animations.html'>Animations</a>
-                    </li>
-                    <li class=''>
-                      <a href='elements.html'>Elements</a>
-                    </li>
-                    <li class=''>
-                      <a href='icons.html'>Icons</a>
-                    </li>
-                    <li class=''>
-                      <a href='forms.html'>Forms</a>
-                    </li>
-                    <li class=''>
-                      <a href='tables.html'>Tables</a>
-                    </li>
-                    <li class=''>
-                      <a href='typography.html'>Typography</a>
-                    </li>
-                    <li class=''>
-                      <a href='pricing_tables.html'>Pricing tables</a>
-                    </li>
-                    <li class='dropdown-submenu'>
-                      <a href='index.html'>
-                        Submenu
-                        <i class='fa fa-angle-right'></i>
-                      </a>
-                      <ul class='dropdown-menu' role='menu'>
-                        <li>
-                          <a href='index.html'>Submenu item</a>
-                        </li>
-                        <li>
-                          <a href='index.html'>Submenu item</a>
-                        </li>
-                        <li>
-                          <a href='index.html'>Submenu item</a>
-                        </li>
-                      </ul>
-                    </li>
-                  </ul>
-                </li>
-                <li class='dropdown'>
-                  <a class='dropdown-toggle' data-delay='50' data-hover='dropdown' data-toggle='dropdown' href='#'>
-                    <span>
-                      Blog
-                      <i class='fa fa-angle-down'></i>
-                    </span>
-                  </a>
-                  <ul class='dropdown-menu' role='menu'>
-                    <li class=''>
-                      <a href='blog_small.html'>Small image</a>
-                    </li>
-                    <li class=''>
-                      <a href='blog_large.html'>Large image</a>
-                    </li>
-                    <li class=''>
-                      <a href='blog_single_post.html'>Single post</a>
-                    </li>
-                  </ul>
-                </li>
-                <li class='dropdown'>
-                  <a class='dropdown-toggle' data-delay='50' data-hover='dropdown' data-toggle='dropdown' href='#'>
-                    <span>
-                      Portfolio
-                      <i class='fa fa-angle-down'></i>
-                    </span>
-                  </a>
-                  <ul class='dropdown-menu' role='menu'>
-                    <li class=''>
-                      <a href='portfolio.html'>2 columns</a>
-                    </li>
-                    <li class=''>
-                      <a href='portfolio_three_cols.html'>3 columns</a>
-                    </li>
-                    <li class=''>
-                      <a href='portfolio_four_cols.html'>4 columns</a>
-                    </li>
-                    <li class=''>
-                      <a href='portfolio_detail.html'>Project detail</a>
-                    </li>
-                  </ul>
-                </li>
-                <li class='dropdown'>
-                  <a class='dropdown-toggle' data-delay='50' data-hover='dropdown' data-toggle='dropdown' href='#'>
-                    <span>
-                      Contact
-                      <i class='fa fa-angle-down'></i>
-                    </span>
-                  </a>
-                  <ul class='dropdown-menu' role='menu'>
-                    <li class=''>
-                      <a href='contact.html'>Contact</a>
-                    </li>
-                    <li class=''>
-                      <a href='contact2.html'>Contact 2</a>
-                    </li>
-                    <li class=''>
-                      <a href='contact3.html'>Contact 3</a>
-                    </li>
-                  </ul>
-                </li>
-              </ul>
-            </div>
-          </nav>
+      <header id='header' class="main-header">
+        <div class="main-header__info">
+          <div class='container'>
+            <nav class='navbar navbar-collapsed-sm navbar-default' id='nav' role='navigation'>
+              <div class='navbar-header'>
+                <a class='navbar-brand' href='index.html'>
+                  <img alt="Jednotka" width="117" height="39" src="assets/images/logo.svg" />
+                </a>
+              </div>
+            </nav>
+          </div>
+        </div>
+        <div class="main-header__menu">
+          <div class='container'>
+            <nav class='navbar navbar-collapsed-sm navbar-default' id='nav' role='navigation'>
+              <div class='navbar-header'>
+                <button class='navbar-toggle' data-target='.navbar-header-collapse' data-toggle='collapse' type='button'>
+                  <span class='sr-only'>Toggle navigation</span>
+                  <span class='icon-bar'></span>
+                  <span class='icon-bar'></span>
+                  <span class='icon-bar'></span>
+                </button>
+              </div>
+              <div class='collapse navbar-collapse navbar-header-collapse'>
+                <ul class='nav navbar-nav navbar-right'>
+                  <li class='active dropdown'>
+                    <a class='dropdown-toggle' data-delay='50' data-hover='dropdown' data-toggle='dropdown' href='#'>
+                      <span>
+                        Главная
+                        <i class='fa fa-angle-down'></i>
+                      </span>
+                    </a>
+                    <ul class='dropdown-menu' role='menu'>
+                      <li class='active dropdown-submenu'>
+                        <a href='index.html'>Home</a>
+                      </li>
+                      <li class=''>
+                        <a href='index2.html'>Home 2</a>
+                      </li>
+                      <li class=''>
+                        <a href='index3.html'>Home 3</a>
+                      </li>
+                      <li class=''>
+                        <a href='boxed.html'>Boxed layout</a>
+                      </li>
+                    </ul>
+                  </li>
+                  <li class='dropdown'>
+                    <a class='dropdown-toggle' data-delay='50' data-hover='dropdown' data-toggle='dropdown' href='#'>
+                      <span>
+                        Хадж
+                        <i class='fa fa-angle-down'></i>
+                      </span>
+                    </a>
+                    <ul class='dropdown-menu' role='menu'>
+                      <li class=''>
+                        <a href='about_us.html'>About us</a>
+                      </li>
+                      <li class=''>
+                        <a href='services.html'>Services</a>
+                      </li>
+                      <li class=''>
+                        <a href='faq.html'>FAQ</a>
+                      </li>
+                      <li>
+                        <a href='404.html'>404 Error</a>
+                      </li>
+                      <li>
+                        <a href='500.html'>500 Error</a>
+                      </li>
+                      <li>
+                        <a href='coming_soon.html'>Coming soon</a>
+                      </li>
+                      <li>
+                        <a href='under_construction.html'>Under construction</a>
+                      </li>
+                    </ul>
+                  </li>
+                  <li class='dropdown'>
+                    <a class='dropdown-toggle' data-delay='50' data-hover='dropdown' data-toggle='dropdown' href='#'>
+                      <span>
+                        Умра
+                        <i class='fa fa-angle-down'></i>
+                      </span>
+                    </a>
+                    <ul class='dropdown-menu' role='menu'>
+                      <li class=''>
+                        <a href='animations.html'>Animations</a>
+                      </li>
+                      <li class=''>
+                        <a href='elements.html'>Elements</a>
+                      </li>
+                      <li class=''>
+                        <a href='icons.html'>Icons</a>
+                      </li>
+                      <li class=''>
+                        <a href='forms.html'>Forms</a>
+                      </li>
+                      <li class=''>
+                        <a href='tables.html'>Tables</a>
+                      </li>
+                      <li class=''>
+                        <a href='typography.html'>Typography</a>
+                      </li>
+                      <li class=''>
+                        <a href='pricing_tables.html'>Pricing tables</a>
+                      </li>
+                      <li class='dropdown-submenu'>
+                        <a href='index.html'>
+                          Submenu
+                          <i class='fa fa-angle-right'></i>
+                        </a>
+                        <ul class='dropdown-menu' role='menu'>
+                          <li>
+                            <a href='index.html'>Submenu item</a>
+                          </li>
+                          <li>
+                            <a href='index.html'>Submenu item</a>
+                          </li>
+                          <li>
+                            <a href='index.html'>Submenu item</a>
+                          </li>
+                        </ul>
+                      </li>
+                    </ul>
+                  </li>
+                  <li>
+                    <a href='#'>
+                      <span>
+                        Дар Эль Салам
+                        <br>
+                        о компании
+                      </span>
+                    </a>
+                  </li>
+                  <li>
+                    <a href='#'>
+                      <span>
+                        В помощь <br> паломникам
+                      </span>
+                    </a>
+                  </li>
+                  <li class='dropdown'>
+                    <a class='dropdown-toggle' data-delay='50' data-hover='dropdown' data-toggle='dropdown' href='#'>
+                      <span>
+                        Галерея
+                        <i class='fa fa-angle-down'></i>
+                      </span>
+                    </a>
+                    <ul class='dropdown-menu' role='menu'>
+                      <li class=''>
+                        <a href='portfolio.html'>2 columns</a>
+                      </li>
+                      <li class=''>
+                        <a href='portfolio_three_cols.html'>3 columns</a>
+                      </li>
+                      <li class=''>
+                        <a href='portfolio_four_cols.html'>4 columns</a>
+                      </li>
+                      <li class=''>
+                        <a href='portfolio_detail.html'>Project detail</a>
+                      </li>
+                    </ul>
+                  </li>
+                  <li>
+                    <a href='#'>
+                      <span>
+                        Хадж Миссия России
+                      </span>
+                    </a>
+                  </li>
+                  <li class='dropdown'>
+                    <a class='dropdown-toggle' data-delay='50' data-hover='dropdown' data-toggle='dropdown' href='#'>
+                      <span>
+                        Контакты
+                        <i class='fa fa-angle-down'></i>
+                      </span>
+                    </a>
+                    <ul class='dropdown-menu' role='menu'>
+                      <li class=''>
+                        <a href='contact.html'>Контакты</a>
+                      </li>
+                      <li class=''>
+                        <a href='contact2.html'>Контакты</a>
+                      </li>
+                      <li class=''>
+                        <a href='contact3.html'>Контакты</a>
+                      </li>
+                    </ul>
+                  </li>
+                </ul>
+              </div>
+            </nav>
+          </div>
         </div>
       </header>
       <div id='main' role='main'>
@@ -216,50 +230,13 @@
         <div class='hero-carousel carousel-blur carousel-blur-arrows carousel-blur-pagination flexslider' id='carousel-example-1'>
           <ul class='slides'>
             <li class='item'>
-              <div class='container'>
-                <div class='row'>
-                  <div class='col-lg-12 animate'>
-                    <h1 class='big fadeInUp animated'>
-                      Fully responsive
-                      &amp;
-                      Retina ready
-                    </h1>
-                    <p class='normal fadeInUp animated'>Proin facilisis aliquam nunc quis varius.</p>
-                    <a class='btn btn-contrast btn-lg fadeInRight animated' href='#'>
-                      Show more
-                    </a>
-                  </div>
-                </div>
+              <div class="slides-item__absolute">
+                <img src="assets/images/main_slider/slide-image-1.png" alt="">
               </div>
             </li>
             <li class='item'>
-              <div class='container'>
-                <div class='row'>
-                  <div class='col-lg-12 animate'>
-                    <h2 class='big fadeInLeftBig animated'>
-                      Clean, flat
-                      &amp;
-                      polished design
-                    </h2>
-                    <p class='normal fadeInRightBig animated'>Sed felis ligula, eleifend at neque eget.</p>
-                    <a class='btn btn-contrast btn-lg fadeInDownBig animated' href='#'>
-                      Show more
-                    </a>
-                  </div>
-                </div>
-              </div>
-            </li>
-            <li class='item'>
-              <div class='container'>
-                <div class='row'>
-                  <div class='col-lg-12 animate'>
-                    <h2 class='big fadeInRightBig animated'>Based on Twitter Bootstrap</h2>
-                    <p class='normal fadeInLeftBig animated'>Nam nec tellus molestie, sollicitudin, at...</p>
-                    <a class='btn btn-contrast btn-lg fadeInUpBig animated' href='#'>
-                      Show more
-                    </a>
-                  </div>
-                </div>
+              <div class="slides-item__absolute">
+                <img src="assets/images/main_slider/slide-image-2.png" alt="">
               </div>
             </li>
           </ul>
