under construction page

--- a/darelsalam/index.html
+++ b/darelsalam/index.html
@@ -17,7 +17,8 @@
     <meta content='text/html; charset=utf-8' http-equiv='Content-Type'>
     <meta content='width=device-width, initial-scale=1.0' name='viewport'>
     <!--[if IE]> <meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'> <![endif]-->
-    <link href='assets/images/meta_icons/favicon.ico' rel='shortcut icon' type='image/x-icon'>
+    <link rel="icon" href="assets/images/meta_icons/favicon.png" sizes="32x32" />
+    <link rel="icon" href="assets/images/meta_icons/favicon.png" sizes="192x192" />
     <link href='assets/images/meta_icons/apple-touch-icon.png' rel='apple-touch-icon-precomposed'>
     <!-- / required stylesheets -->
     <link href="assets/stylesheets/bootstrap/bootstrap.min.css" media="all" id="bootstrap" rel="stylesheet" type="text/css" />
@@ -243,11 +244,6 @@
         </div>
         <div id='main-content'>
           <div class='container'>
-            <div class='row'>
-              <div class='col-sm-12'>
-                <p class='lead lead-lg text-center'>Quisque nunc sapien, malesuada vitae luctus in, blandit eu erat. Cras fringilla eros eget justo dictum convallis.</p>
-              </div>
-            </div>
             <div class='panels-wrapper'>
               <div class='row panels'>
                 <div class='col-sm-4 panel-item'>
