--- a/darelsalam/under_construction.html
+++ b/darelsalam/under_construction.html
@@ -1,15 +1,10 @@
 <!DOCTYPE html>
-<!--
-  Name: Jednotka - Multipurpose Website HTML Template
-  Author: Bublina Studio - www.bublinastudio.com, info@bublinastudio.com
-  Version: 1.8
--->
 <!--[if lt IE 9]> <html class="lt-ie9" lang="en"> <![endif]-->
 <!--[if !IE] -->
 <html lang='en'>
   <!-- <![endif] -->
   <head>
-    <title>Under construction | Jednotka - Multipurpose Template</title>
+    <title>Дар Эль Салам - Хадж и Умра</title>
     <meta content='blog, business, clean, multipurpose template, twitter bootstrap 3, responsive' name='keywords'>
     <meta content='Jednotka is multipurpose Twitter Bootstrap 3 template which is suitable for any type of business or online project. ' name='description'>
     <meta content='BublinaStudio.com' name='author'>
@@ -17,7 +12,8 @@
     <meta content='text/html; charset=utf-8' http-equiv='Content-Type'>
     <meta content='width=device-width, initial-scale=1.0' name='viewport'>
     <!--[if IE]> <meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'> <![endif]-->
-    <link href='assets/images/meta_icons/favicon.ico' rel='shortcut icon' type='image/x-icon'>
+    <link rel="icon" href="assets/images/meta_icons/favicon.png" sizes="32x32" />
+    <link rel="icon" href="assets/images/meta_icons/favicon.png" sizes="192x192" />
     <link href='assets/images/meta_icons/apple-touch-icon.png' rel='apple-touch-icon-precomposed'>
     <!-- / required stylesheets -->
     <link href="assets/stylesheets/bootstrap/bootstrap.min.css" media="all" id="bootstrap" rel="stylesheet" type="text/css" />
@@ -41,30 +37,30 @@
         </div>
         <div class='row'>
           <div class='col-sm-12'>
-            <h1 class='title fadeInLeft animated'>Under construction</h1>
+            <h1 class='title fadeInLeft animated'>Сайт Дар Эль Салам - в разработке</h1>
             <div class='message fadeInRight animated'>
-              We're currently updating this page.
+              Осталось ждать недолго:
             </div>
           </div>
         </div>
         <div class='row'>
           <div class='col-sm-12'>
-            <div class='countdown fadeInDown animated' data-countdown='2017/05/25 17:00:00'>
+            <div class='countdown fadeInDown animated' data-countdown='2017/02/16 17:00:00'>
               <div class='days countdown-item'>
                 <span class='countdown-time'></span>
-                <span class='countdown-label'>Days</span>
+                <span class='countdown-label'>Дня</span>
               </div>
               <div class='hours countdown-item'>
                 <span class='countdown-time'></span>
-                <span class='countdown-label'>Hours</span>
+                <span class='countdown-label'>Часа</span>
               </div>
               <div class='minutes countdown-item'>
                 <span class='countdown-time'></span>
-                <span class='countdown-label'>Minutes</span>
+                <span class='countdown-label'>Минут</span>
               </div>
               <div class='seconds countdown-item'>
                 <span class='countdown-time'></span>
-                <span class='countdown-label'>Seconds</span>
+                <span class='countdown-label'>Секунд</span>
               </div>
             </div>
           </div>
@@ -72,7 +68,7 @@
         <div class='row'>
           <div class='col-sm-12'>
             <a href='index.html'>
-              <img class="logo fadeInUp animated" alt="Jednotka" width="117" height="39" src="assets/images/logo.svg" />
+              <img class="logo fadeInUp animated" alt="Дар Эль Салам" width="417" height="60"  src="assets/images/logos/dar-el-salam-logo-white.png" />
             </a>
           </div>
         </div>
