--- a/darelsalam/under_construction.html
+++ b/darelsalam/under_construction.html
@@ -4,10 +4,10 @@
 <html lang='en'>
   <!-- <![endif] -->
   <head>
-    <title>Дар Эль Салам - Хадж и Умра</title>
-    <meta content='blog, business, clean, multipurpose template, twitter bootstrap 3, responsive' name='keywords'>
-    <meta content='Jednotka is multipurpose Twitter Bootstrap 3 template which is suitable for any type of business or online project. ' name='description'>
-    <meta content='BublinaStudio.com' name='author'>
+    <title>Сайт Дар Эль Салам в разработке</title>
+    <meta content='Hajj, Umrah, tour, islam, islamic, Хадж, Умра, Ислам, туры, Мекка, Медина' name='keywords'>
+    <meta content='«Дар эль Салам» предлагает: Хадж и Умра на 2017 год. Гостиницы 5*, напротив Масджидуль Харам, завтрак и ужин, авиаперелет и др.' name='description'>
+    <meta content='omarr.ru' name='author'>
     <meta content='all' name='robots'>
     <meta content='text/html; charset=utf-8' http-equiv='Content-Type'>
     <meta content='width=device-width, initial-scale=1.0' name='viewport'>
